Fix movie frames gallery overlap with page filters

--- a/src/components/app-components/movies/movie-page/MoviePage.scss
+++ b/src/components/app-components/movies/movie-page/MoviePage.scss
@@ -8,6 +8,10 @@
     white-space: pre-wrap;
 }
 
+.movie-frames-gallery {
+  z-index: 1;
+}
+
 .movie-extra-info {
   margin-top: 1.3rem;
   margin-bottom: 1.3rem;
